--- a/product_multi_price/views/multi_price_views.xml
+++ b/product_multi_price/views/multi_price_views.xml
@@ -43,7 +43,9 @@
             ref="product_multi_price.product_multi_price_tree_view"
         />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='product_id']" position="replace" />
+            <xpath expr="//field[@name='product_id']" position="attributes">
+                <attribute name="invisible">1</attribute>
+            </xpath>
             <tree position="attributes">
                 <attribute name="editable">bottom</attribute>
             </tree>
