--- a/product_category_active/views/product_views.xml
+++ b/product_category_active/views/product_views.xml
@@ -23,12 +23,12 @@
         <field name="model">product.category</field>
         <field name="inherit_id" ref="product.product_category_list_view" />
         <field name="arch" type="xml">
-            <tree position="attributes">
+            <list position="attributes">
                 <attribute name="decoration-info">not active</attribute>
-            </tree>
-            <tree position="inside">
+            </list>
+            <list position="inside">
                 <field name="active" widget="boolean_toggle" />
-            </tree>
+            </list>
         </field>
     </record>
     <record id="product.product_category_action_form" model="ir.actions.act_window">
